--- a/env.example
+++ b/env.example
@@ -1,13 +1,4 @@
-# database variables
-POSTGRES_DB=autolycus
-POSTGRES_USER=admin
-POSTGRES_PASSWORD=admin
-
-# admin configs
-DISABLE_SIGNUP=False
-ADMIN_USERNAME=admin
-ADMIN_PASSWORD=admin
-
-# api configs
-# No need to updated it anymore
-# API_URL=/api
+POSTGRES_DB=autolycus              # Postgresql database name
+POSTGRES_USER=admin                # Postgresql username
+POSTGRES_PASSWORD=admin            # Postgresql password
+API_URL=http://localhost:5000/api  # Endpoint at which the api will be serving
